# ShutterSift

./: .gitignore  README.md  README.zh.md  config.yaml  pyproject.toml
.github/workflows/: release.yml
clients/desktop/: README.md
clients/web/: README.md
docs/superpowers/plans/: 2026-04-02-cli-ux-redesign.md  2026-04-02-shuttersift-v0.1.0.md  2026-04-02-vlm-blocker-fixes.md
docs/superpowers/specs/: 2026-04-02-cli-ux-redesign.md  2026-04-02-shuttersift-design.md
scripts/: build_benchmark.py  validate_datasets.py
src/shuttersift/: config.py
src/shuttersift/cli/: main.py
src/shuttersift/engine/: __init__.py  capabilities.py  downloader.py  explainer.py  loader.py  organizer.py  pipeline.py  reporter.py  scorer.py  state.py
src/shuttersift/engine/analyzers/: aesthetic.py  composition.py  duplicates.py  exposure.py  face.py  sharpness.py
src/shuttersift/server/: README.md  __init__.py  app.py
src/shuttersift/templates/: report.html.j2
tests/: conftest.py
tests/benchmark/: ground_truth.json  test_benchmark_set.py
tests/fixtures/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_capabilities.py  test_cli.py  test_config.py  test_downloader.py  test_explainer.py  test_loader.py  test_organizer.py  test_pipeline.py  test_reporter.py  test_scorer.py  test_state.py
tests/unit/analyzers/: test_aesthetic.py  test_composition.py  test_duplicates.py  test_exposure.py  test_face.py  test_sharpness.py
