[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shuttersift"
version = "0.1.0"
description = "AI-powered photo culling CLI for photographers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ShutterSift", email = "shuttersift@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    # Image I/O
    "opencv-python-headless>=4.10",
    "Pillow>=10.4",
    "numpy>=1.26",
    "scikit-image>=0.22",
    "exifread>=3.0",
    # Face analysis (Apple Silicon: install mediapipe-silicon manually if this fails)
    "mediapipe>=0.10",
    # Quality assessment (pulls torch)
    "pyiqa>=0.1.9",
    "torch>=2.1",
    # Dedup
    "ImageHash>=4.3",
    # VLM cloud
    "anthropic>=0.34",
    "openai>=1.45",
    # Config
    "pyyaml>=6.0",
    # CLI
    "typer>=0.12",
    "rich>=13.8",
    # Report
    "jinja2>=3.1",
]

[project.optional-dependencies]
raw = [
    # RAW file support (requires libraw headers; Pillow fallback used if absent)
    "rawpy>=0.21",
]
vlm = [
    # Local Moondream2 VLM inference (download model via: ss setup --vlm)
    "moondream>=0.0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "scipy>=1.12",
]

[project.urls]
Homepage = "https://github.com/host452b/ShutterSift"
Repository = "https://github.com/host452b/ShutterSift"
"Bug Tracker" = "https://github.com/host452b/ShutterSift/issues"

[project.scripts]
shuttersift = "shuttersift.cli.main:app"
ss = "shuttersift.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/shuttersift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
